# cell-game-cpp

./: CMakeLists.txt
include/: celltable.h
src/: celltable.cpp  main.cpp
